split project into two crates

--- a/dlx/Cargo.toml
+++ b/dlx/Cargo.toml
@@ -2,7 +2,11 @@
 name = "dlx"
 version = "0.1.0"
 edition = "2018"
+authors = ["Jure Pustoslemšek <jp9483@student.uni-lj.si>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+
 [dependencies]
+libdlx = { path = "libdlx" }
