--- a/dlx/Cargo.toml
+++ b/dlx/Cargo.toml
@@ -11,3 +11,4 @@ authors = ["Jure Pustoslemšek <jp9483@student.uni-lj.si>"]
 [dependencies]
 libdlx = { path = "libdlx" }
 rand = "0.8.5"
+itertools = "0.10.3"
